--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -6,7 +6,7 @@
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-# font_family      monospace
+font_family      JetBrains Mono Nerd Font
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -1320,7 +1320,7 @@
 
 #: The foreground and background colors.
 
-# background_opacity 1.0
+background_opacity 0.8
 
 #: The opacity of the background. A number between zero and one, where
 #: one is opaque and zero is fully transparent. This will only work if
@@ -2787,3 +2787,9 @@ map ctrl+v       paste_from_clipboard
 
 #: }}}
 
+
+
+# BEGIN_KITTY_THEME
+# Everforest Dark Hard
+include current-theme.conf
+# END_KITTY_THEME
