--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,3 +1,4 @@
+include /home/jexlerr/.config/sway/colors-sway
 ### Variables
 #
 # Logo key. Use Mod1 for Alt.
@@ -18,7 +19,7 @@ set $code code
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg ~/.config/sway/wallpaper/wallpaperflare.com_wallpaper.jpg fill
+output * bg /home/jexlerr/.config/sway/wallpaper/japanese_street_shop.png fill
 #
 # Font
 font pango:JetBrainsMono Nerd Font 11
@@ -44,12 +45,11 @@ gaps inner 4
 gaps outer 4
 
 # Color Scheme
-# class                 border    backgr.   text     indicator child_border
-client.focused          #8D9673   #8D9673   #c9ccbd  #c9ccbd   #2f383e
-client.focused_inactive #59654F   #59654F   #c9ccbd  #c9ccbd   #2f383e
-client.unfocused        #59654F   #59654F   #c9ccbd  #c9ccbd   #2f383e
-client.urgent           #c9ccbd   #c9ccbd   #c9ccbd  #c9ccbd   #2f383e
-client.placeholder      #2f383e   #2f383e   #c9ccbd  #c9ccbd   #2f383e
+# class                 border    backgr.   text     indicator 
+client.focused          $color6   $color6   $foreground  $foreground   
+client.focused_inactive $color1   $color1   $foreground  $foreground   
+client.unfocused        $color1   $color1   $foreground  $foreground   
+client.urgent           $color14   $color14   $foreground  $foreground   
 
 
 ### Key bindings
@@ -213,10 +213,10 @@ bar {
     status_command ~/.config/sway/swaybar.sh &
 
     colors {
-        statusline #c9ccbd 
-        background #59654F   
-        inactive_workspace #0E1410 #0E1410 #c9ccbd  
-        focused_workspace #7F886E   #7F886E   #c9ccbd  
+        statusline $color15 
+        background $color1   
+        inactive_workspace $background $background $color15  
+        focused_workspace $color6   $color6   $color15  
     }
 
 }
